--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-svg": "12.3.0",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
