--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@eva-design/eva": "^2.1.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
-    "expo": "~46.0.13",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-svg": "12.3.0",
-    "socket.io-client": "^4.5.2",
-    "expo-location": "~14.3.0"
+    "expo": "^51.0.28",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
+    "react": "^18.2.0",
+    "react-native": "0.74.5",
+    "react-native-svg": "15.2.0",
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
